fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,10 @@ img {
 
 
 @media (max-width: 549px) {
+    .product {
+        padding: 2.5rem 2rem;
+    }
+
     .product-flex {
         flex-direction: column;
     }
